genctl-ci/calico/common/allow-ibm-ports-private.yaml
# This policy opens port 10250 for VPN communication between master and workers,
# port 53 for DNS (5353 for OpenShift 4.3 and later), port 52311 for IBM BigFix
# worker node updates, port 2049 forcommunication with NFS file servers,
# port 3260 for communication to block storage, port 5473 for communication to
# the calico-typha ClusterIP, port 2040 and 2041 on 172.20.0.0/24 for the master
# API server local proxy, and port 443 on 172.21.0.1 (or 10.10.10.1 for clusters
# created more than 3 years ago) for the etcd local proxy.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-ibm-ports-private
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53 #DNS
      - 5353 #for OpenShift 4.3 and later
      # - 2049
      # - 3260
      - 5473 #communication to the calico-typha ClusterIP
      - 443 #ICR
      - 6443 #Sysdig
      - 514 #LogDNA
      - 6514 #LogDNA
      - 4443 #ICR
      - 8200 #Vault
      - 8834 #SOS Tools
      - 20000:32767 #Node Ports
      - 1194 #SOS VPN
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53 #DNS
      - 5353 #for OpenShift 4.3 and later
      # - 2049
      # - 3260
      - 5473 #communication to the calico-typha ClusterIP
      - 443 #ICR
      - 6443 #Sysdig
      - 514 #LogDNA
      - 6514 #LogDNA
      - 4443 #ICR
      - 8200 #Vault
      - 20000:32767 #Node Ports
      - 1194 #SOS VPN
      - 5517 #QRadar
      - 8834 #Tenable Nessus Mgr
      - 10514 #syslogForwarderPort
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24 #etcd local proxy
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24 #etcd local proxy
    protocol: TCP
  - action: Allow
    destination:
      ports:
      - 443
      nets:
      - 172.21.0.1/32 # For clusters created <3 years ago
      # - 10.10.10.1/32 # For clusters created >3 years ago
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 443
      nets:
      - 172.21.0.1/32 # For clusters created <3 years ago
      # - 10.10.10.1/32 # For clusters created >3 years ago
    protocol: TCP
  ingress:
  - action: Allow
    destination:
      ports:
      - 53 #DNS
      - 5353 #DNS
      - 10250 #VPN from master to worker nodes
      - 52311 #IBM BigFix worker node updates
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53 #DNS
      - 5353 #DNS
      - 10250 #VPN from master to worker nodes
      - 52311 #IBM BigFix worker node updates
      - 8834 #Communicating with Tenable Nessus Manager (https://github.ibm.com/ibmcloud/ArmadaCSUtil)
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_private'
  types:
  - Egress
  - Ingress
