genctl-ci/calico/common/allow-vrrp-private.yaml
# This policy opens the VRRP protocol, which is required when running Kubernetes LoadBalancer services.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-vrrp-private
spec:
  egress:
  - action: Allow
    destination: {}
    protocol: 112
    source: {}
  ingress:
  - action: Allow
    destination: {}
    protocol: 112
    source: {}
  order: 1500
  selector: ibm.role == 'worker_private'
  types:
  - Egress
  - Ingress
